[package]
name = "basic_bitcoin_tyron"
version = "0.1.0"
edition = "2018"
authors = ["Xalkan Duarte <xalkan@tyron.io>"]
description = "Tyron is a decentralized finance (DeFi) project focused on developing the Syron U$ Dollar (SU$D), an overcollateralized stablecoin pegged to the U.S. dollar and backed by BTC. Powered by the Internet Computer, Syron aims to provide users with seamless access to USD liquidity while leveraging the security and decentralization of Bitcoin."
documentation = "https://docs.tyron.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
bitcoin = "0.28.1"
bs58 = "0.4.0"
candid = { version = "0.10.7" }
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.3"
ripemd = "0.1.1"
serde = "1.0.132"
sha2 = "0.10.2"
ic-ckbtc-minter-tyron = { git = "https://github.com/txalkan/ic", rev = "498509c5f5484e1349a5fd362fa70913749e74f2" }
icrc-ledger-types = { git = "https://github.com/txalkan/ic", rev = "498509c5f5484e1349a5fd362fa70913749e74f2" }
ic-management-canister-types = { git = "https://github.com/txalkan/ic", rev = "498509c5f5484e1349a5fd362fa70913749e74f2" }
ic-btc-interface = { git = "https://github.com/dfinity/bitcoin-canister", rev = "62a71e47c491fb842ccc257b1c675651501f4b82" }
serde_bytes = "0.11"
ic-canister-log = { git = "https://github.com/txalkan/ic", rev = "498509c5f5484e1349a5fd362fa70913749e74f2" }
#evm-rpc = { git = "https://github.com/internet-computer-protocol/evm-rpc-canister", rev = "e4e8860328bd616a6864b14898c0501ce0da8253" }
