[package]
name = "basic_bitcoin_tyron"
version = "0.2.0"
edition = "2021"
authors = ["Xalkan Duarte <xalkan@tyron.io>"]
description = "Tyron is a decentralized finance (DeFi) project focused on developing the Syron U$ Dollar (SU$D), an overcollateralized stablecoin pegged to the U.S. dollar and backed by BTC. Powered by the Internet Computer, Syron aims to provide users with seamless access to USD liquidity while leveraging the security and decentralization of Bitcoin."
documentation = "https://docs.tyron.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
bitcoin = "0.28.1"
bs58 = "0.4.0"
candid = { version = "0.10.8" }
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.3"
ripemd = "0.1.1"
serde = "1.0.132"
sha2 = "0.10.2"
ic-ckbtc-minter-tyron = { git = "https://github.com/txalkan/ic", rev = "ceb97afab0f561495c6427dd9a15ff38365b29c3" }
icrc-ledger-types = { git = "https://github.com/txalkan/ic", rev = "ceb97afab0f561495c6427dd9a15ff38365b29c3" }
ic-management-canister-types = { git = "https://github.com/txalkan/ic", rev = "ceb97afab0f561495c6427dd9a15ff38365b29c3" }
ic-btc-interface = { git = "https://github.com/dfinity/bitcoin-canister", rev = "62a71e47c491fb842ccc257b1c675651501f4b82" }
serde_bytes = "0.11"
ic-canister-log = { git = "https://github.com/txalkan/ic", rev = "ceb97afab0f561495c6427dd9a15ff38365b29c3" }
ic-stable-structures = "0.5"
serde_json = "1.0"
thiserror = "1.0.57"
num-traits = "0.2"

# @review
# evm-btc-canister = { git = "https://github.com/txalkan/evm-btc-canister", package = "evm_rpc"} @review (dep)
# tokio = { version = "1", features = ["full"] }
# ic0 = "0.21.1"
# url = "2.4"
